force-app/main/default/objects/Invoice__c/fields/Bill_To_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address_Line_2__c</fullName>
    <label>Bill To Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>