force-app/main/default/objects/Invoice__c/fields/Bill_To_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address_Line_3__c</fullName>
    <label>Bill To Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>