force-app/main/default/objects/Invoice__c/fields/Bill_To_City__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_City__c</fullName>
    <label>Bill To City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>