force-app/main/default/objects/Invoice__c/fields/Bill_To_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Postal_Code__c</fullName>
    <label>Bill To Postal Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>