force-app/main/default/objects/Invoice__c/fields/Bill_To_Province__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Province__c</fullName>
    <label>Bill To Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>