force-app/main/default/objects/Invoice__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <formula>CASE( Document_Type_Code__c,
&apos;1&apos;, &apos;Invoice&apos;,
&apos;2&apos;, &apos;Credit&apos;,
&apos;&apos;)</formula>
    <label>Document Type</label>
    <type>Text</type>
</CustomField>