force-app/main/default/objects/Invoice__c/fields/Document_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Document_Type_Code__c</fullName>
    <label>Document Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>