force-app/main/default/objects/Invoice__c/fields/Invoice_Date_Data_Loaded__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date_Data_Loaded__c</fullName>
    <label>Invoice Date (Data Loaded)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>