force-app/main/default/objects/Invoice__c/fields/Language_Preference__c.field-meta.xml
<CustomField>
    <fullName>Language_Preference__c</fullName>
    <formula>BLANKVALUE(TEXT(Account__r.Language_Preference__c),&apos;English&apos;)</formula>
    <label>Language Preference</label>
    <type>Text</type>
</CustomField>