force-app/main/default/objects/Invoice__c/fields/Rep_Num__c.field-meta.xml
<CustomField>
    <fullName>Rep_Num__c</fullName>
    <label>Rep #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>