force-app/main/default/objects/Invoice__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <formula>IF(ISBLANK(Ship_To_Name__c),&apos;&apos;,Ship_To_Name__c &amp; BR()) &amp;
IF(ISBLANK(Ship_To_Address_Line_1__c),&apos;&apos;,Ship_To_Address_Line_1__c &amp; BR()) &amp;
IF(ISBLANK(Ship_To_Address_Line_2__c),&apos;&apos;,Ship_To_Address_Line_2__c &amp; BR()) &amp;
IF(ISBLANK(Ship_To_Address_Line_3__c),&apos;&apos;,Ship_To_Address_Line_3__c &amp; BR()) &amp;
IF(ISBLANK(Ship_To_Address_Line_4__c),&apos;&apos;,Ship_To_Address_Line_4__c &amp; BR()) &amp;
IF(ISBLANK(Ship_To_City__c),&apos;&apos;,Ship_To_City__c &amp; &apos;, &apos;) &amp; Ship_To_Province__c &amp; &apos; &apos; &amp; Ship_To_Postal_Code__c</formula>
    <label>Ship To</label>
    <type>Text</type>
</CustomField>