force-app/main/default/objects/Invoice__c/fields/Ship_To_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address_Line_3__c</fullName>
    <label>Ship To Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>