force-app/main/default/objects/Invoice__c/fields/Ship_To_PO_Box__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_PO_Box__c</fullName>
    <label>Ship To PO Box</label>
    <length>255</length>
    <type>Text</type>
</CustomField>