force-app/main/default/objects/Invoice__c/fields/Ship_To_Province__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Province__c</fullName>
    <label>Ship To Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>