force-app/main/default/objects/Invoice__c/fields/Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Sold_To__c</fullName>
    <formula>IF(ISBLANK(Bill_To_Name__c),&apos;&apos;,Bill_To_Name__c &amp; BR()) &amp;
IF(ISBLANK(Bill_To_Address_Line_1__c),&apos;&apos;,Bill_To_Address_Line_1__c &amp; BR()) &amp;
IF(ISBLANK(Bill_To_Address_Line_2__c),&apos;&apos;,Bill_To_Address_Line_2__c &amp; BR()) &amp;
IF(ISBLANK(Bill_To_Address_Line_3__c),&apos;&apos;,Bill_To_Address_Line_3__c &amp; BR()) &amp;
IF(ISBLANK(Bill_To_Address_Line_4__c),&apos;&apos;,Bill_To_Address_Line_4__c &amp; BR()) &amp;
IF(ISBLANK(Bill_To_City__c),&apos;&apos;,Bill_To_City__c &amp; &apos;, &apos;) &amp; Bill_To_Province__c &amp; &apos; &apos; &amp; Bill_To_Postal_Code__c</formula>
    <label>Sold To</label>
    <type>Text</type>
</CustomField>