force-app/main/default/objects/Invoice__c/fields/Tax_1__c.field-meta.xml
<CustomField>
    <fullName>Tax_1__c</fullName>
    <label>Tax 1</label>
    <length>25</length>
    <type>Text</type>
</CustomField>