force-app/main/default/objects/Invoice__c/fields/Tax_2_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_2_Amount__c</fullName>
    <label>Tax 2 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>