force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Customer_Number__c</columns>
    <columns>Account__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Location__c</columns>
    <columns>Sub_Total__c</columns>
    <columns>Tax_1_Amount__c</columns>
    <columns>Invoice_Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>